err/librpg.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/LibRPG-0.4.egg-info'...
Listing './lib/python3.5/site-packages/librpg'...
Compiling './lib/python3.5/site-packages/librpg/camera.py'...
***   File "./lib/python3.5/site-packages/librpg/camera.py", line 62
    raise NotImplementedError, \
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/librpg/dialog.py'...
***   File "./lib/python3.5/site-packages/librpg/dialog.py", line 58
    raise NotImplementedError, 'Dialog.process_event() is abstract'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/librpg/item.py'...
***   File "./lib/python3.5/site-packages/librpg/item.py", line 442
    raise NotImplementedError, 'UsableItem.use() is abstract'
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/librpg/menu'...
Compiling './lib/python3.5/site-packages/librpg/movement.py'...
***   File "./lib/python3.5/site-packages/librpg/movement.py", line 29
    raise NotImplementedError, 'Movement.flow() is abstract'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/librpg/sound.py'...
***   File "./lib/python3.5/site-packages/librpg/sound.py", line 15
    print "no sound device available"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/librpg/util.py'...
***   File "./lib/python3.5/site-packages/librpg/util.py", line 132
    raise IndexError, '%s was indexed with x=%s y=%s' % (repr(self),
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/librpg/world.py'...
***   File "./lib/python3.5/site-packages/librpg/world.py", line 102
    raise NotImplementedError, 'BaseWorld.gameloop() is abstract'
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
